metadata-classic/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Support</fullName>
        <description>This support process is used by the customer support team.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer</fullName>
        </values>
        <values>
            <fullName>Pending Thumbtack</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ANI__c</fullName>
        <label>ANI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AccountEmailText__c</fullName>
        <description>Formula field to bring over the Account Email address onto the case object, used as merge field in email templates.</description>
        <formula>Account.usr_email__c</formula>
        <label>Account Email (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountManager__c</fullName>
        <description>Account manager user name.</description>
        <formula>Account.AccountManager__r.FirstName + &quot; &quot;+ Account.AccountManager__r.LastName</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkChangePassword__c</fullName>
        <formula>IF(Account.AccountFlag__c = &apos;Confidential - do not view admin&apos;, &apos;Link disabled, see case notes&apos;, 
HYPERLINK(&quot;https://www.thumbtack.com/admin/users/edit_password?usr_user_id=&quot;&amp;Account.ThumbtackUserID__c, &quot;Change Password&quot;)
)</formula>
        <inlineHelpText>Open the Thumbtack Admin tool and navigate to the Change Password page for the current user.</inlineHelpText>
        <label>Admin Link Change Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkDeletionsLogs__c</fullName>
        <formula>IF(Account.AccountFlag__c = &apos;Confidential - do not view admin&apos;, &apos;Link disabled, see case notes&apos;, 
HYPERLINK(&quot;https://www.thumbtack.com/admin/deletion/logs?user=&quot;&amp;Account.ThumbtackUserID__c, &quot;Deletion Logs&quot;)
)</formula>
        <label>Admin Link Deletions Logs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkEditUser__c</fullName>
        <formula>IF(Account.AccountFlag__c = &apos;Confidential - do not view admin&apos;, &apos;Link disabled, see case notes&apos;, 
HYPERLINK(&quot;https://www.thumbtack.com/admin/users/edit?usr_user_id=&quot;&amp;Account.ThumbtackUserID__c, &quot;Edit User&quot;)
)</formula>
        <inlineHelpText>Open the Thumbtack Admin tool and navigate to the Add Service page for the current user.</inlineHelpText>
        <label>Admin Link Edit User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkLoginAsUser__c</fullName>
        <formula>IF(Account.AccountFlag__c = &apos;Confidential - do not view admin&apos;, &apos;Link disabled, see case notes&apos;, 
HYPERLINK(&quot;https://www.thumbtack.com/admin/login?usr_user_id=&quot;&amp;Account.ThumbtackUserID__c&amp;&quot;&amp;return_url=/profile/account&quot;, &quot;Log in as &quot;&amp;Account.ThumbtackUserID__c)
)</formula>
        <label>Admin Link Login As User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkSuggestedQuestions__c</fullName>
        <formula>IF(Account.AccountFlag__c = &apos;Confidential - do not view admin&apos;, &apos;Link disabled, see case notes&apos;, 
HYPERLINK(&quot;https://www.thumbtack.com/admin/public-questions/?seller_email=&quot;&amp;Contact.Email, &quot;Suggested Questions&quot;)
)</formula>
        <label>Admin Link Suggested Questions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkViewUser__c</fullName>
        <formula>IF(Account.AccountFlag__c = &apos;Confidential - do not view admin&apos;, &apos;Link disabled, see case notes&apos;, 
IF( ISBLANK(Account.ThumbtackUserID__c), HYPERLINK(&quot;https://www.thumbtack.com/admin/users?search_type=email&amp;searchterm=&quot;&amp; Account.usr_email__c, &quot;View User&quot;), 
HYPERLINK(&quot;https://www.thumbtack.com/admin/users/user?usr_user_id=&quot;&amp; Account.ThumbtackUserID__c, &quot;View User&quot;) 
))</formula>
        <inlineHelpText>Open the Thumbtack Admin tool and navigate to the View User page for the current user.</inlineHelpText>
        <label>Admin Link View User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoClosedReason__c</fullName>
        <description>Picklist used to specify which process was used to automatically close a case.</description>
        <label>Auto Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Customer Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate true if the case was closed via an automatic process and/or workflow.</description>
        <label>Auto Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoResponseRuleAppliedDate__c</fullName>
        <description>The date/time an auto response rule was applied to the case.</description>
        <label>Auto Response Rule Applied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutoResponseRule__c</fullName>
        <description>Picklist whose value will dictate which auto response workflow rule with email alert we trigger.</description>
        <label>Auto Response Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Message intended for Customer</fullName>
                </value>
                <value>
                    <fullName>Message intended for Pro</fullName>
                </value>
                <value>
                    <fullName>Quote intended for Customer</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Account/Profile</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Pricing and Payments</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Dispute</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Feedback</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Getting Started</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Notifications</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Other</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Quotes</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Refunds</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Requests</fullName>
                </value>
                <value>
                    <fullName>Product Auto Response for Reviews</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoResponseTemplate__c</fullName>
        <label>Auto Response Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Template 1</fullName>
                </value>
                <value>
                    <fullName>Template 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageResponseTimeHours__c</fullName>
        <description>Formula field to calculate the average response time per case in hours.</description>
        <formula>IF(
 ISPICKVAL(Status, &apos;Closed&apos;),
 ((TimeInNewSeconds__c + TimeInPendingThumbtackSeconds__c)/(1+ NumberOfTimesInPendingThumbtack__c))/3600,
Null
)</formula>
        <label>Average Response Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageResponseTimeMins__c</fullName>
        <description>Formula field to calculate the average response time in minutes.</description>
        <formula>IF( 
ISPICKVAL(Status, &apos;Closed&apos;), 
((TimeInNewSeconds__c + TimeInPendingThumbtackSeconds__c)/(1+ NumberOfTimesInPendingThumbtack__c))/60, 
Null 
)</formula>
        <label>Average Response Time (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCChargesPostEmailSent__c</fullName>
        <description>Custom date/time field to store the date/time when the specific BGCCharges Post Followup email was sent; used for auditing purposes.</description>
        <label>BGC Charges Post Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BGCChargesPreEmailSent__c</fullName>
        <label>BGC Charges Pre Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BGCCharges__c</fullName>
        <description>Copy and paste charges into this field. This field will merge this field in the AA-post/pre email templates.</description>
        <label>BGC Charges</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGCReportId__c</fullName>
        <description>The ID of the external background check report.</description>
        <externalId>true</externalId>
        <label>BGC Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckReportId__c</fullName>
        <label>Background Check Report Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BackgroundCheck__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background Check</label>
        <referenceTo>BackgroundCheck__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BacklogEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by the Bulk Email - Backlog Notification macro to indicate if the backlog email has been sent.</description>
        <label>Backlog Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BugReportAction__c</fullName>
        <description>Picklist field to indicate what the reporting agent (Case Owner&apos;s) action status is for a pending Bug Report.</description>
        <label>Bug Report Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needed</fullName>
                </value>
                <value>
                    <fullName>Taken</fullName>
                </value>
                <value>
                    <fullName>Bug Report Closed (for Bugs Team Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BugReportClosedDate__c</fullName>
        <description>The date/time the last related bug report was closed for this case.</description>
        <label>Bug Report Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BugReportOpenCount__c</fullName>
        <description>Roll-up summary field that counts the number of open Bug Reports per case.</description>
        <label>Bug Report Open Count</label>
        <summaryFilterItems>
            <field>SupportProcess__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed, Completed - Pending New Bug</value>
        </summaryFilterItems>
        <summaryForeignKey>SupportProcess__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BugReportSubmittedDate__c</fullName>
        <description>The date/time that the bug report was submitted.</description>
        <label>Bug Report Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CEBusinessLevelEvaluation__c</fullName>
        <description>Formula hyperlink field for QA team to launch business level evaluations.</description>
        <formula>HYPERLINK(&quot;https://thumbtack.co1.qualtrics.com/jfe/form/SV_esnsEWhFHR5Utgh?sf_caseid=&quot;&amp;Id&amp;&quot;&amp;sf_caseownerid=&quot;&amp;OwnerId&amp;&quot;&amp;sf_userid=&quot;&amp;$User.Id&amp;&quot;&amp;sf_cat=&quot;&amp;TEXT(Category__c)&amp;&quot;&amp;sf_sub=&quot;&amp;TEXT(SubCategory__c)&amp;&quot;&amp;sf_ownerfirst=&quot;&amp;Owner:User.FirstName&amp;&quot;&amp;sf_ownerlast=&quot;&amp;Owner:User.LastName&amp;&quot;&amp;sf_auditorname=&quot;&amp;$User.FirstName&amp;&quot;%20&quot;&amp;$User.LastName&amp;&quot;&amp;sf_accountname=&quot;&amp;Account.Name&amp;&quot;&amp;sf_contactfirstname=&quot;&amp;ContactFirstName__c&amp;&quot;&amp;sf_contactlastname=&quot;&amp;ContactLastName__c&amp;&quot;&amp;sf_date=&quot;&amp;Text(month(datevalue(left(text(now()-6/24),10))))&amp;&quot;/&quot;&amp;Text(day(datevalue(left(text(now()-6/24),10))))&amp;&quot;/&quot;&amp;Text(year(datevalue(left(text(now()-6/24),10))))&amp;&quot;&amp;sf_casenumber=&quot;&amp;CaseNumber&amp;&quot;&quot;, &quot;Launch Form&quot;,&quot;_blank&quot;)</formula>
        <inlineHelpText>Hyperlink for QA team to launch business level evaluations.</inlineHelpText>
        <label>CE Business Level Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSATEligibleCategoryAudit__c</fullName>
        <description>Formula field to indicate if the categorization of the case is a CSAT exception.</description>
        <formula>IF(ISBLANK( ContactId ), &quot;No Contact Set&quot;,
IF(NOT ISBLANK(DuplicateOf__c), &quot;Duplicate Indicated&quot;,
IF( 
OR( 
ISPICKVAL(Category__c, &quot;Delete Account&quot;),
ISPICKVAL(Category__c, &quot;Chat&quot;),
AND( 
ISPICKVAL(Category__c, &quot;Phone&quot;), 
ISPICKVAL(SubCategory__c, &quot;Wrong number&quot;)), 
AND( 
ISPICKVAL(Category__c, &quot;Marketplace Integrity&quot;), 
ISPICKVAL(SubCategory__c, &quot;Duplicate&quot;)),
AND( 
ISPICKVAL(Category__c, &quot;Marketplace Integrity&quot;), 
OR(ISPICKVAL(SubCategory__c, &quot;Negative review&quot;),ISPICKVAL(SubCategory__c, &quot;Concerning review&quot;))),
AND( 
ISPICKVAL(Category__c, &quot;Notifications&quot;), 
ISPICKVAL(SubCategory__c, &quot;Unsubscribe&quot;)),
AND( 
ISPICKVAL(Category__c, &quot;Other&quot;), 
OR(ISPICKVAL(SubCategory__c, &quot;Background check (mismatch)&quot;),    
     ISPICKVAL(SubCategory__c, &quot;Message intended for customer&quot;),
     ISPICKVAL(SubCategory__c, &quot;Message intended for pro&quot;),
     ISPICKVAL(SubCategory__c, &quot;Foreign language&quot;),
     ISPICKVAL(SubCategory__c, &quot;Press inquiries&quot;),
     ISPICKVAL(SubCategory__c, &quot;Noise&quot;),
     ISPICKVAL(SubCategory__c, &quot;Not enough info&quot;),
     ISPICKVAL(SubCategory__c, &quot;Proactive - no response&quot;))), 
AND(
ISPICKVAL(Category__c,&quot;Quotes&quot;),
ISPICKVAL(SubCategory__c,&quot;Quote intended for customer&quot;))),&quot;Category Exception&quot;, 
&quot;Category Eligible&quot;)))</formula>
        <inlineHelpText>Indicates if the categorization of the case is excluded from CSAT eligibility.</inlineHelpText>
        <label>CSAT Eligible Category Audit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSATEligible__c</fullName>
        <description>Formula field to display eligibility text if a case meets certain criteria for a survey offer.</description>
        <formula>IF(Contact.DoNotSurvey__c, &quot;Not Eligible&quot;, 
IF(ISPICKVAL(Origin, &quot;Outbound Phone&quot;), &quot;Not Eligible&quot;, 
IF(AutoClosed__c, &quot;Not Eligible&quot;, 
IF(Contact.ContactIsThumbtackStaff__c, &quot;Not Eligible&quot;, 
IF(SurveyOffered__c, &quot;Not Eligible&quot;, 
IF(IsTestData__c, &quot;Not Eligible&quot;,
IF(AND(NOT ISBLANK(Incident__c),
       Incident__r.RecordType.Name = &quot;MI Incident&quot;), &quot;Not Eligible&quot;, 
IF(ContactEmailRouting__c = &quot;Route to Sales &amp; Account Management&quot;, &quot;Not Eligible&quot;, 
IF(ISPICKVAL(DoNotSurvey__c, &quot;Marketplace Integrity&quot;), &quot;Not Eligible&quot;, 
IF(ISPICKVAL(DoNotSurvey__c, &quot;Customer/Pro Requested&quot;), &quot;Not Eligible&quot;, 
IF(ISPICKVAL(DoNotSurvey__c, &quot;Special Projects&quot;), &quot;Not Eligible&quot;, 
IF(ISPICKVAL(DoNotSurvey__c, &quot;Abusive Pro/Customer&quot;), &quot;Not Eligible&quot;, 
IF(ISPICKVAL(DoNotSurvey__c, &quot;QA Audit&quot;), &quot;Not Eligible&quot;, 
IF(ISPICKVAL(DoNotSurvey__c, &quot;Sys Admin Bulk Close&quot;), &quot;Not Eligible&quot;, 
IF(ISPICKVAL(Origin, &quot;App Integration&quot;), &quot;Not Eligible&quot;, 
IF(ISBLANK(ClosedDate), &quot;Not Eligible&quot;, 
IF((NOW() - ClosedDate &gt;= 14), &quot;Not Eligible&quot;, 
IF(ISBLANK(Contact.Email), &quot;Not Eligible&quot;, 
IF(NOT ISBLANK( DuplicateOf__c ), &quot;Not Eligible&quot;, 
IF( ElapsedSurveyHours__c &lt;= 24, &quot;Not Eligible&quot;, 
IF( 
OR( 
ISPICKVAL(Category__c, &quot;Delete Account&quot;), 
ISPICKVAL(Category__c, &quot;Chat&quot;), 
AND( 
ISPICKVAL(Category__c, &quot;Phone&quot;), 
ISPICKVAL(SubCategory__c, &quot;Wrong number&quot;)), 
AND( 
ISPICKVAL(Category__c, &quot;Marketplace Integrity&quot;), 
 OR(ISPICKVAL(SubCategory__c, &quot;Duplicate&quot;),
    ISPICKVAL(SubCategory__c, &quot;Background check&quot;),
    ISPICKVAL(SubCategory__c, &quot;Certification agreement&quot;),
    ISPICKVAL(SubCategory__c, &quot;DMCA/Copyright&quot;), 
    ISPICKVAL(SubCategory__c, &quot;Negative review&quot;),
    ISPICKVAL(SubCategory__c, &quot;Concerning review&quot;),
    ISPICKVAL(SubCategory__c, &quot;Incident&quot;),
    ISPICKVAL(SubCategory__c, &quot;License&quot;),
    ISPICKVAL(SubCategory__c, &quot;Trademark&quot;),
    ISPICKVAL(SubCategory__c, &quot;Other&quot;))),
AND( 
ISPICKVAL(Category__c, &quot;Notifications&quot;), 
ISPICKVAL(SubCategory__c, &quot;Unsubscribe&quot;)), 
AND( 
ISPICKVAL(Category__c, &quot;Other&quot;), 
OR(ISPICKVAL(SubCategory__c, &quot;Background check (mismatch)&quot;), 
ISPICKVAL(SubCategory__c, &quot;Message intended for customer&quot;), 
ISPICKVAL(SubCategory__c, &quot;Message intended for pro&quot;), 
ISPICKVAL(SubCategory__c, &quot;Foreign language&quot;), 
ISPICKVAL(SubCategory__c, &quot;Press inquiries&quot;), 
ISPICKVAL(SubCategory__c, &quot;Noise&quot;), 
ISPICKVAL(SubCategory__c, &quot;Not enough info&quot;), 
ISPICKVAL(SubCategory__c, &quot;Proactive - no response&quot;))), 
AND( 
ISPICKVAL(Category__c,&quot;Quotes&quot;), 
ISPICKVAL(SubCategory__c,&quot;Quote intended for customer&quot;))), 
&quot;Not Eligible&quot;, 
IF( 
AND( 
TEXT(Category__c) = Contact.LastSurveyedCaseCategory__c, 
TEXT(SubCategory__c) = Contact.LastSurveyedCaseSubcategory__c, 
ElapsedSurveyHours__c &lt;= 48), &quot;Not Eligible&quot;, 
&quot;Eligible&quot;))))))))))))))))))))))</formula>
        <label>CSAT Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSFlagApprovalStatus__c</fullName>
        <description>Customer Success user flag manager approval status.</description>
        <inlineHelpText>The status of the request.</inlineHelpText>
        <label>CS Flag Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSFlagApprovingManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user to indicate who the manager is that should approve the flag.</description>
        <inlineHelpText>Enter the name of your manager.</inlineHelpText>
        <label>CS Flag Approving Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseCSFlagManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSFlagExplanation__c</fullName>
        <description>Open text area to explain why the flag is being added to the account.</description>
        <inlineHelpText>Please explain why you believe a user flag should be added.</inlineHelpText>
        <label>CS Flag Explanation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSFlagType__c</fullName>
        <description>Picklist of values that a CS Agent can select for the flag reason.</description>
        <inlineHelpText>Select the appropriate reason for the flag.</inlineHelpText>
        <label>CS Flag Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banned from Facebook Page</fullName>
                </value>
                <value>
                    <fullName>Circumventing Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Fake Requests</fullName>
                </value>
                <value>
                    <fullName>Frequent Caller</fullName>
                </value>
                <value>
                    <fullName>Non-Discrimination Policy Notice</fullName>
                </value>
                <value>
                    <fullName>Repeated Refund Requests</fullName>
                </value>
                <value>
                    <fullName>Security Code</fullName>
                </value>
                <value>
                    <fullName>Unprofessional Behavior</fullName>
                </value>
                <value>
                    <fullName>Unprofessional Behavior towards Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallbackAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to indicate the user who needs to call the customer / pro back.</description>
        <label>Callback Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallbackLoggedInUser__c</fullName>
        <description>Formula field to indicate if the logged in user is the same person as the Callback User.</description>
        <formula>IF(  CallbackAgent__r.Id  =  $User.Id, True, False)</formula>
        <label>Callback Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callback__c</fullName>
        <description>Picklist field to indicate whether or not the associated contact of the case needs or requested a follow-up phone call.</description>
        <label>Callback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested from Email Support</fullName>
                </value>
                <value>
                    <fullName>Follow-up from Phone Call</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseAgeDays__c</fullName>
        <description>Formula field to display case age in days.</description>
        <formula>IF(ISPICKVAL(Status, &apos;Closed&apos;), (ClosedDate - CreatedDate), 
IF(ISPICKVAL(Status, &apos;Pending Thumbtack&apos;), (NOW() - LastModifiedDate), 
(NOW() - CreatedDate)))</formula>
        <label>Case Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseAgeHours__c</fullName>
        <description>Formula field to calculate the case age (not in business hours) based on the case status.</description>
        <formula>IF(ISPICKVAL(Status, &apos;Closed&apos;), (ClosedDate - CreatedDate)*24, 
IF(ISPICKVAL(Status, &apos;Pending Thumbtack&apos;), (NOW() - LastModifiedDate)*24, 
(NOW() - CreatedDate)*24))</formula>
        <label>Case Age (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseConsoleLink__c</fullName>
        <description>Link to the Case, used in Reporting</description>
        <formula>&quot;https://thumbtack.my.salesforce.com/console#%2F&quot;&amp;Id</formula>
        <label>Case Console Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>An external Id for all Case records, set by the Case Trigger Handler. The Case External Id is the 18 character Salesforce Id.</description>
        <externalId>true</externalId>
        <label>Case External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CaseFeedFlag__c</fullName>
        <description>Populated via Process Builder based on Feed Actions; used in CaseTriggerHandler to update related object (e.g., MI Incident)</description>
        <label>Case Feed Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text Post</fullName>
                </value>
                <value>
                    <fullName>Advanced Text Post</fullName>
                </value>
                <value>
                    <fullName>Call Log Feed</fullName>
                </value>
                <value>
                    <fullName>Chat Transcript Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseFlag__c</fullName>
        <description>Formula field to display an image based on certain case criteria.</description>
        <formula>IF( NewEmailFlag__c = True, 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/CaseRespondedBlueCircleArrow&quot;, &quot;Reply Received&quot;, 13, 13), 
IF(Owner:Queue.QueueName = &quot;Marketplace Integrity&quot;, IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/InQueueIcon&quot;, &quot;Case Unassigned&quot;,15,15), 
IF(ISPICKVAL( BugReportAction__c , &quot;Needed&quot;), 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/BugsIconOrange&quot;, &quot;Bug Report Action Needed&quot;, 15, 15), 
IF(ISPICKVAL( BugReportAction__c , &quot;Bug Report Closed (For Bugs Team Only)&quot;), 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/BugsIconGreen&quot;, &quot;Bug Report Action Needed&quot;, 15, 15), 
IF(ISPICKVAL( SupportResourceAction__c , &quot;Needed&quot;), 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/LifesaverOrange&quot;, &quot;Support Resource Action Needed&quot;, 15, 15), 
IF(ISPICKVAL( SupportResourceAction__c , &quot;SR Ticket Closed&quot;), 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/LifesaverGreen&quot;, &quot;Support Resource Action Needed&quot;, 15, 15), 
IF( FollowUpDate__c &lt;= NOW(), 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/CaseFlagDueDate&quot;, &quot;Follow Up Due&quot;, 15,15), 
IF(ISPICKVAL( ReviewDisputeDecision__c, &quot;Awaiting Decision&quot;), 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/waiting&quot;,&quot;Awaiting Decision&quot;, 15,15), 
IF(AND( 
IsClosed = False, 
OR(ISPICKVAL( ReviewDisputeDecision__c, &quot;Removed Review&quot;), 
ISPICKVAL( ReviewDisputeDecision__c, &quot;Edited Review&quot;))), 
IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/thumbsup&quot;, &quot;Dispute Decision Agree&quot;, 15,15), 
IF(AND( 
IsClosed = False, 
OR(ISPICKVAL( ReviewDisputeDecision__c, &quot;Leave Review #Loveit&quot;), 
ISPICKVAL(ReviewDisputeDecision__c, &quot;Leave Review #CBB&quot;))), IMAGE(LEFT( $Api.Partner_Server_URL_410 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))+&quot;resource/thumbsdown&quot;, &quot;Dispute Decision Disagree&quot;, 15,15),
Null))))))))))</formula>
        <label>Case Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwnerAcceptsIncomingEmail__c</fullName>
        <description>Formula field to indicate if the case owner accepts incoming email.</description>
        <formula>IF( OwnerIsQueue__c = True, &apos;Yes&apos;,
IF( AND(
      Owner:User.IsActive = True, 
       OR(
      ISPICKVAL(Owner:User.AcceptIncomingEmail__c, &apos;Yes&apos;),
      ISBLANK(TEXT(Owner:User.AcceptIncomingEmail__c))
          )
       ),&apos;Yes&apos;,
&apos;No&apos;))</formula>
        <label>Case Owner Accepts Incoming Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwnerActive__c</fullName>
        <description>Formula field that indicates if the Case Owner is currently an active user of Tack.</description>
        <formula>IF( OwnerIsQueue__c , True,
IF(Owner:User.IsActive, True,
False
))</formula>
        <label>Case Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseOwnerEmail__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwnerFullName__c</fullName>
        <description>Formula field to gather the case owner name (either queue name or user name); used in flow to create case update history records.</description>
        <formula>IF(OwnerIsQueue__c, Owner:Queue.QueueName, Owner:User.FirstName + &quot; &quot; + Owner:User.LastName)</formula>
        <label>Case Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwnerManager__c</fullName>
        <formula>Owner:User.Manager.FirstName + &quot; &quot; + Owner:User.Manager.LastName</formula>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CasePriorityInteger__c</fullName>
        <formula>CASE(Priority, &apos;High&apos;, 1, &apos;Medium&apos;, 2,&apos;Low&apos;,3,&apos;&apos;,2,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePriorityInteger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseRef__c</fullName>
        <description>This is the case reference field generated in outgoing emails used for case routing rules. This field is automatically generated by formula.</description>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <inlineHelpText>The value used in emails to allow salesforce to relate incoming emails to cases.</inlineHelpText>
        <label>Case Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>L1 category issue - this is where the general area goes.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account / Profile</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Customer Payments</fullName>
                </value>
                <value>
                    <fullName>Delete Account</fullName>
                </value>
                <value>
                    <fullName>Getting Started</fullName>
                </value>
                <value>
                    <fullName>Marketplace Integrity</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Pricing and Payments</fullName>
                </value>
                <value>
                    <fullName>Instant Match</fullName>
                </value>
                <value>
                    <fullName>Quotes</fullName>
                </value>
                <value>
                    <fullName>Quoting Service</fullName>
                </value>
                <value>
                    <fullName>Refunds</fullName>
                </value>
                <value>
                    <fullName>Requests</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>